// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme full render 1`] = `
<Header>
  <styled.header>
    <header
      className="sc-bdVaJa khUSez"
    >
      <styled.h1>
        <h1
          className="sc-bwzfXH hjgrZj"
        >
          todos
        </h1>
      </styled.h1>
    </header>
  </styled.header>
</Header>
`;

exports[`enzyme shallow render 1`] = `
<styled.header>
  <styled.h1>
    todos
  </styled.h1>
</styled.header>
`;

exports[`enzyme static render 1`] = `
<header
  class="sc-bdVaJa khUSez"
>
  <h1
    class="sc-bwzfXH hjgrZj"
  >
    todos
  </h1>
</header>
`;

exports[`render default <Header /> 1`] = `
<header
  className="sc-bdVaJa khUSez"
>
  <h1
    className="sc-bwzfXH hjgrZj"
  >
    todos
  </h1>
</header>
`;
